tests/lex-fail/float_missing_exp2_eof.fl.0.exp
Error: float_missing_exp2_eof.fl(1,1): Missing exponent part of floating point literal 
123.32E
^       
